@@ -683,5 +683,17 @@ namespace DanbooruDownloader3.Properties {
                 this["ProcessDeletedPost"] = value;
             }
         }
+        
+        [global::System.Configuration.UserScopedSettingAttribute()]
+        [global::System.Diagnostics.DebuggerNonUserCodeAttribute()]
+        [global::System.Configuration.DefaultSettingValueAttribute("0")]
+        public string BatchJobDelay {
+            get {
+                return ((string)(this["BatchJobDelay"]));
+            }
+            set {
+                this["BatchJobDelay"] = value;
+            }
+        }
     }
 }
