@@ -173,6 +173,9 @@
       <setting name="ProcessDeletedPost" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="BatchJobDelay" serializeAs="String">
+        <value>0</value>
+      </setting>
     </DanbooruDownloader3.Properties.Settings>
   </userSettings>
   <log4net>
